# gamble-Ai-agent

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vercel.json
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: ChallengeEscrow.sol  UsageToken.sol
docs/: VOICE_TRANSCRIPTION_REVIEW.md  oracle-instructions.md  vercel-deployment-zh.md
gambles-recordings/: README.md  verification.json
gambles-recordings/gamble-01/: player_a.webm  player_b.webm
gambles-recordings/gamble-02/: player_a.webm  player_b.webm
gambles-recordings/gamble-03/: player_a.webm  player_b.webm
gambles-recordings/gamble-04/: player_a.webm  player_b.webm
gambles-recordings/gamble-05/: player_a.webm  player_b.webm
gambles-recordings/gamble-06/: player_a.webm  player_b.webm
gambles-recordings/gamble-07/: player_a.webm  player_b.webm
gambles-recordings/gamble-08/: player_a.webm  player_b.webm
gambles-recordings/gamble-09/: player_a.webm  player_b.webm
gambles-recordings/gamble-10/: player_a.webm  player_b.webm
prisma/: schema.prisma
scripts/: agent-trace.ts  inspect-hungry.ts  load-test.ts  print-pricing.ts  race-test.ts  test-agent.ts  test-createChallenge-guard.ts  test-delete-market.ts  test-matchme.ts  test-parse.ts  test-vision-judge.ts
scripts/sql/: supabase-realtime-publication.sql
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AuthModal.tsx  (+24 more)
tests/: conftest.py
(+137 files in other folders)
